# petcam-lab

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHALLENGE.md  CLAUDE.md  Dockerfile  Dockerfile.api  README.md  fly.api.toml  fly.toml  for-cross-review.md  main.py  pyproject.toml
.claude/: donts-audit.md  settings.json  skills-catalog.md
backend/: auth.py  capture.py  capture_main.py  clip_perms.py  clip_recorder.py  crypto.py  encode_upload_worker.py  encoding.py  health.py  local_track_a.py  main.py  motion.py  pending_inserts.py  r2_uploader.py  router_features.py  router_features_main.py  rtsp_probe.py  supabase_client.py  vlm_worker_main.py
data/: README.md  gt-159.jsonl
docs/: AI-VIDEO-ANALYSIS-STRATEGY.md  API.md  ARCHITECTURE.md  CONTRIBUTING.md  DATABASE.md  DEPLOYMENT.md  ENV.md  FEATURES.md  GLOSSARY.md  LABELER-ONBOARDING.md  LOCAL_LLM_TRACK_A_REPORT.md  MAC_MINI_DEV_ENV.md  RBA-HOW-IT-WORKS.md  VLM-CLASSIFIER.md  decision-gate.md  flutter-handoff-d5-auth.md  petcam-north-star.md  r2-orphan-review-runbook.md  stage-d-cameras-learning.md  stage-d5-tunnel-learning.md
eval/: README.md  compare.py
experiments/: INDEX.md
inbox/: .gitkeep
migrations/: 2026-05-07_behavior_logs_unique_clip_source.sql  2026-05-07_vlm_pending_clips_rpc.sql  2026-07-08_behavior_logs_owner_select_rls.sql  2026-07-09_create_clip_router_features.sql  2026-07-10_router_feature_runs_provenance.sql  2026-07-10_router_review_labels_add_unseen.sql  2026-07-10_router_review_tables.sql  2026-07-12_clip_labeling_sessions.sql  2026-07-13_labeler_applications.sql  2026-07-13_labeling_session_revisions.sql  2026-07-13_labeling_session_revisions_append_only.sql  2026-07-13_labeling_tutorial.sql  2026-07-13_labeling_tutorial_hardening.sql  2026-07-13_labeling_tutorial_hardening_2.sql  2026-07-13_labeling_tutorial_hardening_3.sql  2026-07-13_labeling_tutorial_hardening_4.sql  2026-07-13_labeling_tutorial_seed_template.sql  2026-07-14_activity_filter_evidence_identity.sql  2026-07-14_activity_filter_identity_frames.sql  2026-07-14_activity_filter_v0.sql  2026-07-15_clip_vlm_candidate_jobs.sql  2026-07-15_labeling_triage.sql  2026-07-15_labeling_triage_guard_execute_revoke.sql  2026-07-16_clip_vlm_failure_diagnostic.sql  (+9 more)
(+1329 files in other folders)
