[project]
name = "petcam-lab"
version = "0.1.0"
description = "도마뱀 특화 펫캠(게코 캠) 영상 백엔드 서비스"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.0",
    "opencv-python>=4.13.0.92",
    "pyjwt[crypto]>=2.12.1",
    "python-dotenv>=1.2.2",
    "supabase>=2.28.3",
    "uvicorn>=0.44.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
# 프로젝트 루트를 sys.path에 추가 → `from backend.capture import ...` 가능해짐
pythonpath = ["."]
testpaths = ["tests"]
